# yiirs

./: Cargo.toml  README.md
src/internal/: axum.rs  salvo.rs
template/axum/: Cargo.yiirs  README.yiirs
template/axum/app/cmd/: serve.tera
template/axum/internal/core/: cache.yiirs  logger.yiirs
template/axum/internal/middleware/: log.yiirs  trace.yiirs
template/salvo/: Cargo.yiirs  README.yiirs
template/salvo/app/cmd/: serve.tera
template/salvo/internal/middleware/: log.yiirs  trace.yiirs
template/salvo/internal/util/: identity.yiirs
